Add medium posts to index page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,73 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Seva Zhidkov – personal site</title>
-  <style>
-  .social-links {
-    margin-top: 1.5%;
-  }
-  .social-link, .projects-block {
-    display: block;
-    margin-top: 0.5%;
-  }
-  .projects, .publications {
-    margin-top: 2%;
-  }
-  </style>
-</head>
-<body>
-  <main>
-    <header>
-      <h1>Seva Zhidkov</h1>
-      <p>Python developer and Data Sciencist. School student. Bots evangelist.</p>
-    </header>
-    <div class="social-links">
-      <span class="social-link"><b>Github</b>: <a href="https://github.com/sevazhidkov">https://github.com/sevazhidkov</a></span>
-      <span class="social-link"><b>VK</b>: <a href="https://vk.com/shamoiseva">https://vk.com/shamoiseva</a></span>
-      <span class="social-link"><b>Twitter</b>: <a href="https://twitter.com/sevazhidkov">https://twitter.com/sevazhidkov</a></span>
-      <span class="social-link"><b>Facebook</b>: <a href="https://www.facebook.com/shamoiseva">https://www.facebook.com/shamoiseva</a></span>
-      <span class="social-link"><b>Product Hunt</b>: <a href="https://www.producthunt.com/@sevazhidkov">https://www.producthunt.com/@sevazhidkov</a></span>
-    </div>
-    <div class='projects'>
-      <div class="projects-block">
-        <b>Site projects</b>:
-        <span class="project"><a href='/news'>news</a></span>
+  <head>
+    <meta charset="utf-8">
+    <title>Seva Zhidkov – personal site</title>
+    <style>
+      .social-links {
+      margin-top: 1.5%;
+      }
+      .social-link, .projects-block {
+      display: block;
+      margin-top: 0.5%;
+      }
+      .projects, .media-publications, .medium-posts {
+      margin-top: 2%;
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <header>
+        <h1>Seva Zhidkov</h1>
+        <p>Python developer and Data Sciencist. School student. Bots evangelist.</p>
+      </header>
+      <div class="social-links">
+        <span class="social-link"><b>Github</b>: <a href="https://github.com/sevazhidkov">https://github.com/sevazhidkov</a></span>
+        <span class="social-link"><b>VK</b>: <a href="https://vk.com/shamoiseva">https://vk.com/shamoiseva</a></span>
+        <span class="social-link"><b>Twitter</b>: <a href="https://twitter.com/sevazhidkov">https://twitter.com/sevazhidkov</a></span>
+        <span class="social-link"><b>Facebook</b>: <a href="https://www.facebook.com/shamoiseva">https://www.facebook.com/shamoiseva</a></span>
+        <span class="social-link"><b>Product Hunt</b>: <a href="https://www.producthunt.com/@sevazhidkov">https://www.producthunt.com/@sevazhidkov</a></span>
       </div>
-      <div class="projects-block">
-        <b>Founded</b>:
-        <span class="project"><a href='#'>Lises <i>(2014-2015)</i></a></span>
-        <span class="project"><a href='#'>Lises Analytics <i>(2015)</i></a></span>
-        <span class="project"><a href='http://leonardbot.xyz'>Leonard Bot <i>(2015-2016)</i></a></span>
+      <div class='projects'>
+        <div class="projects-block">
+          <b>Site projects</b>:
+          <span class="project"><a href='/news'>news</a></span>
+        </div>
+        <div class="projects-block">
+          <b>Founded</b>:
+          <span class="project"><a href='#'>Lises <i>(2014-2015)</i></a></span>
+          <span class="project"><a href='#'>Lises Analytics <i>(2015)</i></a></span>
+          <span class="project"><a href='http://leonardbot.xyz'>Leonard Bot <i>(2015-2016)</i></a></span>
+        </div>
+        <div class="projects-block">
+          <b>Worked</b>:
+          <span class="project"><a href='http://vertigo.am'>Vertigo Group Inc. <i>(2015)</i></a></span>
+          <span class="project"><a href='https://meduza.io'>Meduza.io <i>(2015-2016)</i></a></span>
+        </div>
+        <span class="projects-block"><i><a href='/cv'>Full CV</a></i></span>
       </div>
-      <div class="projects-block">
-        <b>Worked</b>:
-        <span class="project"><a href='http://vertigo.am'>Vertigo Group Inc. <i>(2015)</i></a></span>
-        <span class="project"><a href='https://meduza.io'>Meduza.io <i>(2015-2016)</i></a></span>
-      </div>
-      <span class="projects-block"><i><a href='/cv'>Full CV</a></i></span>
-    </div>
-    <div class='publications'>
-      <b>Media publications</b>:
-      <ul>
-        <li><a href='https://meduza.io/cards/zachem-nuzhny-boty-i-kak-ih-sdelat'>
-          What are bots and how to make them?</a> <i>(2016, Meduza.io)</i></li>
+      <div class='media-publications'>
+        <b>Media publications</b>:
+        <ul>
+          <li><a href='https://meduza.io/cards/zachem-nuzhny-boty-i-kak-ih-sdelat'>
+            What are bots and how to make them?</a> <i>(2016, Meduza.io)</i>
+          </li>
           <li><a href='https://tproger.ru/interview/seva-zhidkov/'>
             Seva Zhidkov, 14 years old: 'First I have worked in Meduza.io,
             than I started a startup about bots. Now Mail.Ru Group is
-            intrested in me.'</a> <i>(2016, Tproger.ru, Interview)</i></li>
-            <li><a href='https://vc.ru/p/leonard-bot'>
-              Leonard Bot - virtual assistant bot in Telegram and VK</a> <i>(2016, VC.ru)</i></li>
-            </ul>
-          </div>
-          <hr/>
-          <p>&copy; 2015, Seva Zhidkov</p>
-          <footer>
-            <p><i>Site looks like I follow <a href='http://motherfuckingwebsite.com'>Motherf**king Website concept</a>.
-              Actually i do not. Right now I haven't enough time to make a cool design and I don't want to make
-              another <a href="http://adventurega.me/bootstrap/">Every F**king Bootstrap Website Ever</i></a>.
-            </p>
-          </footer>
-        </main>
-      </body>
-      </html>
+            intrested in me.'</a> <i>(2016, Tproger.ru, Interview)</i>
+          </li>
+          <li><a href='https://vc.ru/p/leonard-bot'>Leonard Bot - virtual assistant bot in Telegram and VK</a> <i>(2016, VC.ru)</i></li>
+        </ul>
+      </div>
+      <div class='medium-posts'>
+        <b>Last Medium posts</b>:
+        <ul>
+          {% for post in last_medium_posts %}
+          <li><a href="{{ post.link }}">{{ post.title }}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
+      <hr/>
+      <p>&copy; 2015, Seva Zhidkov</p>
+      <footer>
+        <p><i>Site looks like I follow <a href='http://motherfuckingwebsite.com'>Motherf**king Website concept</a>.
+          Actually i do not. Right now I haven't enough time to make a cool design and I don't want to make
+          another <a href="http://adventurega.me/bootstrap/">Every F**king Bootstrap Website Ever</i></a>.
+        </p>
+      </footer>
+    </main>
+  </body>
+</html>
